--- a/book/static/css/book.css
+++ b/book/static/css/book.css
@@ -26,7 +26,7 @@ h1, h2, h3, h4 {
     float: right;
 }
 
-.post-form textarea, .post-form input {
+.book-form textarea, .book-form input {
     width: 100%;
 }
 
@@ -37,10 +37,10 @@ h1, h2, h3, h4 {
     margin-right: 20px;
 }
 
-.post {
+.book {
     margin-bottom: 70px;
 }
 
-.post h1 a, .post h1 a:visited {
+.book h1 a, .book h1 a:visited {
     color: #000000;
 }
