--- a/book/templates/book/base.html
+++ b/book/templates/book/base.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 <html>
     <head>
-        <title>Django Girls book</title>
+        <title>Libra</title>
         
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
@@ -11,8 +11,8 @@
     </head>
     <body>
         <div class="page-header">
-            <a href="{% url 'new_book' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-            <h1><a href="/">Django Girls book</a></h1>
+            <a href="{% url 'book_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+            <h1><a href="/">Book</a></h1>
         </div>
         
         {% block content %}
